Basic angular.io application is now working

--- a/MusicScheduler/src/MusicScheduler/Views/Shared/_Layout.cshtml
+++ b/MusicScheduler/src/MusicScheduler/Views/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
     </environment>
 </head>
 <body>
+    <MusicSchedulerApp>Loading...</MusicSchedulerApp>
 <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
@@ -68,12 +69,14 @@
     <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.1.4.min.js"
             asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
             asp-fallback-test="window.jQuery">
-            
+
+    
     </script>
     <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.5/bootstrap.min.js"
             asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
             asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal">
-            
+
+    
     </script>
     <script src="~/js/site.min.js" asp-append-version="true"></script>
 </environment>
