--- a/MusicScheduler/src/MusicScheduler/Views/Home/Index.cshtml
+++ b/MusicScheduler/src/MusicScheduler/Views/Home/Index.cshtml
@@ -14,3 +14,23 @@
     </div>
 </form>
 <h3>@ViewData["ErrorMessage"]</h3>
+
+@section scripts {
+
+    <!-- Angular polyfill required everywhere -->
+    <script src="https://code.angularjs.org/2.0.0-beta.17/angular2-polyfills.js"></script>
+
+    <script src="https://code.angularjs.org/tools/system.js"></script>
+    <script src="https://code.angularjs.org/tools/typescript.js"></script>
+    <script src="https://code.angularjs.org/2.0.0-beta.17/Rx.js"></script>
+    <script src="https://code.angularjs.org/2.0.0-beta.17/angular2.dev.js"></script>
+    <script src="https://code.angularjs.org/2.0.0-beta.17/router.dev.js"></script>
+    <script src="https://code.angularjs.org/2.0.0-beta.17/http.dev.js"></script>
+
+    <script>
+        System.config({
+            packages: {'app': {defaultExtension: 'js'}}
+        });
+        System.import('./app/bootstrap').catch(console.log.bind(console));
+    </script>
+}
