Implemented song booking with angular.io

--- a/MusicScheduler/src/MusicScheduler/wwwroot/css/general.css
+++ b/MusicScheduler/src/MusicScheduler/wwwroot/css/general.css
@@ -23,3 +23,9 @@ body .currentlyPlaying {
 
 body .currentlyPlayingHeader {
   font-weight: bold; }
+
+body .input-group {
+  width: 500px; }
+
+body .input-group-addon {
+  width: 125px; }
