--- a/MusicScheduler/src/MusicScheduler/wwwroot/css/general.scss
+++ b/MusicScheduler/src/MusicScheduler/wwwroot/css/general.scss
@@ -36,4 +36,12 @@ body {
     .currentlyPlayingHeader {
         font-weight: bold;
     }
+
+    .input-group {
+        width: 500px;
+    }
+
+    .input-group-addon {
+        width: 125px;
+    }
 }
