--- a/MusicScheduler/src/MusicScheduler/Views/Home/Index.cshtml
+++ b/MusicScheduler/src/MusicScheduler/Views/Home/Index.cshtml
@@ -1,21 +1,4 @@
-﻿<form asp-controller="Home" asp-action="Index" method="post" class="form-horizontal" role="form">
-    <h2>Book</h2>
-    <div class="input-group">
-        <span class="input-group-addon" id="input-youtube">Youtube URL</span>
-        <input id="youtubeURL" type="text" name="YoutubeLink" class="col-md-8 form-control">
-    </div>
-    <div class="input-group">
-        <span class="input-group-addon" id="input-username">Username</span>
-        <input type="text" name="User" class="col-md-8 form-control">
-    </div>
-
-    <div class="input-group">
-        <button type="submit" class="btn btn-primary">Book</button>
-    </div>
-</form>
-<h3>@ViewData["ErrorMessage"]</h3>
-
-@section scripts {
+﻿@section scripts {
 
     <!-- Angular polyfill required everywhere -->
     <script src="https://code.angularjs.org/2.0.0-beta.17/angular2-polyfills.js"></script>
