Implemented skip and pause/resume with angular.io

--- a/MusicScheduler/src/MusicScheduler/wwwroot/css/general.css
+++ b/MusicScheduler/src/MusicScheduler/wwwroot/css/general.css
@@ -6,7 +6,8 @@ body .navbar-inverse .navbar-brand {
   color: white; }
 
 body .navbar-inverse .navbar-nav > li > a {
-  color: white; }
+  color: white;
+  cursor: pointer; }
 
 body .navbar-inverse .navbar-nav > li > a:hover {
   color: #46A3F4; }
