--- a/MusicScheduler/src/MusicScheduler/wwwroot/css/general.scss
+++ b/MusicScheduler/src/MusicScheduler/wwwroot/css/general.scss
@@ -14,6 +14,7 @@ body {
 
     .navbar-inverse .navbar-nav > li > a {
         color: white;
+        cursor: pointer;
     }
 
     .navbar-inverse .navbar-nav > li > a:hover {
