--- a/MusicScheduler/src/MusicScheduler/wwwroot/css/general.scss
+++ b/MusicScheduler/src/MusicScheduler/wwwroot/css/general.scss
@@ -21,6 +21,14 @@ body {
         color: $primary-color-highlight;
     }
 
+    .userTable th {
+        width: 150px;
+    }
+
+    .userTable {
+        margin-bottom: 50px;
+    }
+
     .input-group {
         margin-top: 20px;
         margin-bottom: 20px;
